# WixTelemetryCA

./: .gitignore  CMakeLists.txt  build.cake
src/: Registry.cpp  Registry.hpp  TelemetryCollect.cpp  TelemetryExtension.cpp  picojson.hpp
test/: TestInstaller.wxs
tools/: packages.config  packages.config.md5sum
